--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         : 'css/print/paper.css';
       document.getElementsByTagName('head')[0].appendChild(link);
     </script>
+    <script src="js/three.js"></script>
   </head>
   <body>
     <div class="reveal">
@@ -56,6 +57,71 @@
               </div>
             </div>
           </section>
+        </section>
+
+        <section>
+          <h3>Hienoja 3D-kuvia</h3>
+          <canvas id="threejstest" width="700" height="700"></canvas>
+          <script>
+            let renderer = new THREE.WebGLRenderer({
+              canvas: threejstest,
+              alpha: true,
+              antialias: true
+            });
+            let scene = new THREE.Scene();
+            let canvasSize = new THREE.Vector2();
+            renderer.getSize(canvasSize);
+            let aspectRatio = canvasSize.x / canvasSize.y;
+            let camera = new THREE.PerspectiveCamera(45, aspectRatio, 0.1, 1000);
+            var light = new THREE.HemisphereLight(0xffffff, 0x0f0f0f, 1);
+            scene.add(light);
+
+            // Hexagonal ice crystal geometry
+            let crystal = new THREE.CylinderGeometry(1, 1, 1, 6, 1);
+
+            // Edges of crystal
+            let edges = new THREE.EdgesGeometry(crystal);
+            let line = new THREE.LineSegments(
+              edges,
+              new THREE.LineBasicMaterial({ color: 0x000000 })
+            );
+            scene.add(line);
+
+            // Base material for crystal
+            let crystalMaterial = new THREE.MeshStandardMaterial({
+              transparent: true,
+              opacity: 0.75,
+              color: 0xaaccff
+            });
+            let crystalMesh = new THREE.Mesh(crystal, crystalMaterial);
+            scene.add(crystalMesh);
+
+            // Cast ray to crystal
+            let rayOrigin = new THREE.Vector3(1.0, 3.0, 0.0);
+            let rayDir = new THREE.Vector3(-0.2, -1.0, 0.0).normalize();
+            let raycaster = new THREE.Raycaster(rayOrigin, rayDir);
+            let intersectionPoints = raycaster.intersectObject(crystalMesh);
+
+            // Draw ray
+            let rayGeometry = new THREE.Geometry();
+            rayGeometry.vertices.push(rayOrigin);
+            rayGeometry.vertices.push(intersectionPoints[0].point);
+            let rayMaterial = new THREE.LineBasicMaterial({
+              color: 0x000000
+            });
+            let rayLineMesh = new THREE.Line(rayGeometry, rayMaterial);
+            scene.add(rayLineMesh);
+
+            let t = 0;
+            function animate() {
+              camera.position.set(5.0 * Math.sin(t), 1.0, 5.0 * Math.cos(t));
+              camera.lookAt(new THREE.Vector3(0.0, 0.0, 0.0));
+              t = t + 0.005;
+              requestAnimationFrame(animate);
+              renderer.render(scene, camera);
+            }
+            animate();
+          </script>
         </section>
 
         <section>
