Add sketch slide for upcoming features

--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
           <h2>HaloRay</h2>
           <img height="500" src="images/haloray-screenshot.jpg" />
         </section>
+        <section>
+          <h2>Tulossa</h2>
+          <ul>
+            <li>Simulaation tallentaminen</li>
+            <li>Pyramidikiteet</li>
+            <li>Eksoottisemmat kiteet?</li>
+            <li>
+              Analyysiominaisuuksia
+              <ul>
+                <li>Mikä valonkulku aiheutti tämän halon?</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
 
