--- a/index.html
+++ b/index.html
@@ -84,71 +84,12 @@
 
           <section>
             <h3>Hienoja 3D-kuvia</h3>
-            <canvas id="threejstest" width="700" height="700"></canvas>
-            <script>
-              let renderer = new THREE.WebGLRenderer({
-                canvas: threejstest,
-                alpha: true,
-                antialias: true
-              });
+            <canvas data-content="raycasttest" width="700" height="700"></canvas>
+          </section>
 
-              let canvasSize = new THREE.Vector2();
-              renderer.getSize(canvasSize);
-              let aspectRatio = canvasSize.x / canvasSize.y;
-              let camera = new THREE.PerspectiveCamera(45, aspectRatio, 0.1, 1000);
-
-              let scene = new THREE.Scene();
-              var light = new THREE.HemisphereLight(0xffffff, 0x0f0f0f, 1);
-              scene.add(light);
-
-              // Hexagonal ice crystal geometry
-              let crystal = new THREE.CylinderGeometry(1, 1, 1, 6, 1);
-
-              // Edges of crystal
-              let edges = new THREE.EdgesGeometry(crystal);
-              let line = new THREE.LineSegments(
-                edges,
-                new THREE.LineBasicMaterial({ color: 0x000000 })
-              );
-              scene.add(line);
-
-              // Base material for crystal
-              let crystalMaterial = new THREE.MeshStandardMaterial({
-                transparent: true,
-                opacity: 0.75,
-                color: 0xaaccff
-              });
-              let crystalMesh = new THREE.Mesh(crystal, crystalMaterial);
-              scene.add(crystalMesh);
-
-              // Cast ray to crystal
-              let rayOrigin = new THREE.Vector3(1.0, 3.0, 0.0);
-              let rayDir = new THREE.Vector3(-0.2, -1.0, 0.0).normalize();
-              let raycaster = new THREE.Raycaster(rayOrigin, rayDir);
-              let intersectionPoints = raycaster.intersectObject(crystalMesh);
-
-              // Draw ray
-              let rayGeometry = new THREE.Geometry();
-              rayGeometry.vertices.push(rayOrigin);
-              rayGeometry.vertices.push(intersectionPoints[0].point);
-              let rayLineMesh = new THREE.Line(
-                rayGeometry,
-                new THREE.LineBasicMaterial({
-                  color: 0x000000
-                })
-              );
-              scene.add(rayLineMesh);
-
-              let t = 0;
-              function animate() {
-                camera.position.set(5.0 * Math.sin(t), 1.0, 5.0 * Math.cos(t));
-                camera.lookAt(new THREE.Vector3(0.0, 0.0, 0.0));
-                t = t + 0.005;
-                requestAnimationFrame(animate);
-                renderer.render(scene, camera);
-              }
-              animate();
-            </script>
+          <section>
+            <h3>Toinen hieno 3D-kuva</h3>
+            <canvas data-content="secondtest" width="700" height="700"></canvas>
           </section>
         </section>
 
@@ -232,6 +173,15 @@
           { src: 'plugin/notes/notes.js', async: true }
         ]
       });
+    </script>
+    <script src="lib/js/jquery.min.js"></script>
+    <script src="lib/js/EventEmitter.js"></script>
+    <script src="js/canvases.js"></script>
+    <script src="js/canvases/raycasttest.js"></script>
+    <script src="js/canvases/secondtest.js"></script>
+
+    <script>
+      initializeCanvases();
     </script>
   </body>
 </html>
