Add canvas for showing different crystal types

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
           <section>
             <h2>Jääkiteitä + auringonvaloa = haloja</h2>
           </section>
+          <section>
+            <h3>Jääkiteet</h3>
+            <ul>
+              <li>Laattakiteitä</li>
+              <li>Pylväskiteitä</li>
+            </ul>
+            <canvas data-content="crystalExamples" width="900" height="400"></canvas>
+          </section>
         </section>
 
         <section>
@@ -179,6 +187,7 @@
     <script src="js/canvases.js"></script>
     <script src="js/canvases/raycasttest.js"></script>
     <script src="js/canvases/secondtest.js"></script>
+    <script src="js/canvases/crystalExamples.js"></script>
 
     <script>
       initializeCanvases();
