Add pyramidal crystals to slide

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
           <section>
             <h3>Jääkiteet</h3>
             <ul>
-              <li>Laattakiteitä</li>
-              <li>Pylväskiteitä</li>
+              <li>Laattakiteet</li>
+              <li>Pylväskiteet</li>
+              <li>Pyramidikiteet</li>
             </ul>
             <canvas data-content="crystalExamples" width="900" height="400"></canvas>
           </section>
