Remove texts from Who? page

--- a/index.html
+++ b/index.html
@@ -42,26 +42,15 @@
             <h1 style="color: white">Taivaalle tuijottelua jo vuodesta 1988</h1>
           </section>
           <section>
-            <h2>Kuka?</h2>
+            <h3>Kuka?</h3>
             <div style="display: grid; grid-template-columns: 1fr 1fr">
               <div style="grid-column: 1;">
-                <ul>
-                  <li>Pitkän linjan tähtiharrastaja</li>
-                  <li data-fragment-index="1" class="fragment">Ohjelmistoinsinööri päiväsaikaan</li>
-                  <li data-fragment-index="2" class="fragment">
-                    Alkujaan Lohjalta, nykyään Helsingissä
-                  </li>
-                </ul>
+                <img src="images/tuleva-ammatti.jpg" style="height: 400px" />
               </div>
 
               <div style="grid-column: 2;">
-                <div data-fragment-index="1" class="fragment fade-out">
-                  <img style="max-height: unset;" src="images/omakuva_kiroilua.PNG" />
-                  <p style="font-size: 0.5em;">Kuva: Janne Kari</p>
-                </div>
-                <div data-fragment-index="1" class="fragment fade-in">
-                  <img src="images/tuleva-ammatti.jpg" style="max-height: unset;" />
-                </div>
+                <img style="height: 300px" src="images/omakuva_kiroilua.PNG" />
+                <p style="font-size: 0.5em; margin-top: -10px;">Kuva: Janne Kari</p>
               </div>
             </div>
           </section>
