Add text about HaloRay features

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           </section>
           <section>
             <h3>Kuka?</h3>
-            <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="display: grid; grid-template-columns: 2fr 3fr">
               <div style="grid-column: 1;">
                 <img src="images/tuleva-ammatti.jpg" style="height: 400px" />
               </div>
 
               <div style="grid-column: 2;">
-                <img style="height: 300px" src="images/omakuva_kiroilua.PNG" />
-                <p style="font-size: 0.5em; margin-top: -10px;">Kuva: Janne Kari</p>
+                <img style="height: 300px; margin-bottom: 0px;" src="images/omakuva_kiroilua.PNG" />
+                <p style="font-size: 0.25em; margin-top: 0px;">Kuva: Janne Kari</p>
               </div>
             </div>
           </section>
@@ -73,6 +73,13 @@
             </ul>
             <canvas data-content="crystalExamples" width="900" height="400"></canvas>
           </section>
+          <section>
+            <h2>Laattakidehalot</h2>
+          </section>
+          <section>
+            <h2>Pylväskidehalot</h2>
+          </section>
+          <section><h2>Pyramidihalot</h2></section>
         </section>
 
         <section>
@@ -117,8 +124,28 @@
         </section>
 
         <section>
-          <h2>HaloRay</h2>
-          <img height="500" src="images/haloray-screenshot.jpg" />
+          <section>
+            <h2>HaloRay</h2>
+            <img height="500" src="images/haloray-screenshot.jpg" />
+          </section>
+          <section>
+            <h2>HaloRay</h2>
+            <ul>
+              <li>Aktiivinen kehitys aloitettu toukokuussa</li>
+              <li>Windows & Linux</li>
+              <li>Kaikki laskenta tapahtuu näytönohjaimella</li>
+              <li>
+                Avointa lähdekoodia
+                <ul>
+                  <li>
+                    <a href="https://github.com/naavis/haloray"
+                      >https://github.com/naavis/haloray</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </section>
         </section>
 
         <section>
