Add comparison image between simulation and real life

--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
         </section>
 
         <section>
+          <img src="images/2014-06-24-high-cloud-halo-comparison.png" />
+        </section>
+
+        <section>
           <h2>Tulossa</h2>
           <ul>
             <li>Simulaation tallentaminen</li>
