Add visualization of different crystal orientations

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2>Jääkiteitä + auringonvaloa = haloja</h2>
           </section>
           <section>
-            <h3>Jääkiteet</h3>
+            <h3>Jääkidemuodot</h3>
             <ul>
               <li>Laattakiteet</li>
               <li>Pylväskiteet</li>
@@ -75,9 +75,19 @@
           </section>
           <section>
             <h2>Laattakidehalot</h2>
+            <canvas data-content="plateCrystals" width="700" height="700"></canvas>
           </section>
           <section>
             <h2>Pylväskidehalot</h2>
+            <canvas data-content="columnCrystals" width="700" height="700"></canvas>
+          </section>
+          <section>
+            <h2>Parry-halot</h2>
+            <canvas data-content="parryCrystals" width="700" height="700"></canvas>
+          </section>
+          <section>
+            <h2>Lowitz-halot</h2>
+            <canvas data-content="lowitzCrystals" width="700" height="700"></canvas>
           </section>
           <section><h2>Pyramidihalot</h2></section>
         </section>
@@ -209,6 +219,10 @@
     <script src="js/canvases/raycasttest.js"></script>
     <script src="js/canvases/secondtest.js"></script>
     <script src="js/canvases/crystalExamples.js"></script>
+    <script src="js/canvases/plateCrystals.js"></script>
+    <script src="js/canvases/columnCrystals.js"></script>
+    <script src="js/canvases/parryCrystals.js"></script>
+    <script src="js/canvases/lowitzCrystals.js"></script>
 
     <script>
       initializeCanvases();
