Add visualization for pyramid crystal orientations

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
             <h2>Lowitz-halot</h2>
             <canvas data-content="lowitzCrystals" width="700" height="700"></canvas>
           </section>
-          <section><h2>Pyramidihalot</h2></section>
+          <section>
+            <h2>Pyramidihalot</h2>
+            <canvas data-content="pyramidCrystals" width="700" height="700"></canvas>
+          </section>
         </section>
 
         <section>
@@ -223,6 +226,7 @@
     <script src="js/canvases/columnCrystals.js"></script>
     <script src="js/canvases/parryCrystals.js"></script>
     <script src="js/canvases/lowitzCrystals.js"></script>
+    <script src="js/canvases/pyramidCrystals.js"></script>
 
     <script>
       initializeCanvases();
