Add more images

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             <canvas data-content="crystalExamples" width="900" height="400"></canvas>
           </section>
           <section>
+            <h2>Sattumanvaraiset kiteet</h2>
+            <img src="images/22degree_luomanen.jpg" height="500" />
+          </section>
+          <section>
             <h2>Laattakidehalot</h2>
             <canvas data-content="plateCrystals" width="700" height="700"></canvas>
           </section>
@@ -87,11 +91,33 @@
           </section>
           <section>
             <h2>Lowitz-halot</h2>
-            <canvas data-content="lowitzCrystals" width="700" height="700"></canvas>
+            <div style="display: grid; grid-template-columns: 1fr 1fr;">
+              <canvas
+                style="grid-column: 1; grid-row: 1;"
+                data-content="lowitzCrystals"
+                width="300"
+                height="300"
+              ></canvas>
+
+              <img src="images/lowitz_luomanen.jpg" style="min-width: 300px;" />
+            </div>
           </section>
           <section>
             <h2>Pyramidihalot</h2>
-            <canvas data-content="pyramidCrystals" width="700" height="700"></canvas>
+            <div style="display: grid; grid-template-columns: 1fr 1fr;">
+              <canvas
+                style="grid-column: 1; grid-row: 1;"
+                data-content="pyramidCrystals"
+                width="300"
+                height="300"
+              ></canvas>
+
+              <img
+                style="grid-column: 2; grid-row: 1;"
+                src="images/pyramidhalos.jpg"
+                style="min-height:300px"
+              />
+            </div>
           </section>
         </section>
 
