Add photographer names to some images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           </section>
           <section>
             <h2>Sattumanvaraiset kiteet</h2>
-            <img src="images/22degree_luomanen.jpg" height="500" />
+            <img src="images/22degree_luomanen.jpg" height="475" />
+            <p style="font-size: 0.45em; margin-top: 0px;">Kuva: Jari Luomanen</p>
           </section>
           <section>
             <h2>Laattakidehalot</h2>
@@ -99,7 +100,13 @@
                 height="300"
               ></canvas>
 
-              <img src="images/lowitz_luomanen.jpg" style="min-width: 300px;" />
+              <img
+                src="images/lowitz_luomanen.jpg"
+                style="min-width: 300px; grid-column: 2; grid-row: 1;"
+              />
+              <p style="font-size: 0.45em; margin-top: 0px; grid-column: 2;">
+                Kuva: Jari Luomanen
+              </p>
             </div>
           </section>
           <section>
