--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </section>
 
           <section>
-            <h2>Nopeus</h2>
+            <h2>Esimerkki</h2>
             <ul>
               <li class="fragment">
                 Intel i7-3770K
@@ -214,6 +214,7 @@
               </li>
             </ul>
           </section>
+          <section><h2>Voisiko näytönohjainta hyödyntää? 🤔</h2></section>
         </section>
 
         <section>
@@ -275,7 +276,7 @@
           <ul>
             <li>Simulaation tallentaminen</li>
             <li>Pyramidikiteet</li>
-            <li>Eksoottisemmat kiteet?</li>
+            <li>Muut eksoottiset kidemuodot</li>
             <li>
               Analyysiominaisuuksia
               <ul>
