--- a/index.html
+++ b/index.html
@@ -109,7 +109,19 @@
           </section>
           <section>
             <h2>Parry-halot</h2>
-            <canvas data-content="parryCrystals" width="700" height="700"></canvas>
+            <div style="display: grid; grid-template-columns: 2fr 3fr">
+              <canvas
+                data-content="parryCrystals"
+                style="grid-column: 1; grid-row: 1;"
+                width="300"
+                height="300"
+              ></canvas>
+              <img
+                src="images/parry_halos_luomanen.jpg"
+                style="grid-column: 2; grid-row: 1; margin-left: auto; margin-right: auto; max-height: 475px;"
+              />
+              <p style="font-size: 0.45em; margin-top: 0px; grid-column: 2;">Kuva: Jari Luomanen</p>
+            </div>
           </section>
           <section>
             <h2>Lowitz-halot</h2>
