Add actualy raytracing to raycasting slide

--- a/index.html
+++ b/index.html
@@ -166,13 +166,8 @@
           </section>
 
           <section>
-            <h3>Hienoja 3D-kuvia</h3>
+            <h3>Säteen kuljetus</h3>
             <canvas data-content="raycasttest" width="700" height="700"></canvas>
-          </section>
-
-          <section>
-            <h3>Toinen hieno 3D-kuva</h3>
-            <canvas data-content="secondtest" width="700" height="700"></canvas>
           </section>
 
           <section>
@@ -319,7 +314,6 @@
     <script src="lib/js/EventEmitter.js"></script>
     <script src="js/canvases.js"></script>
     <script src="js/canvases/raycasttest.js"></script>
-    <script src="js/canvases/secondtest.js"></script>
     <script src="js/canvases/crystalExamples.js"></script>
     <script src="js/canvases/plateCrystals.js"></script>
     <script src="js/canvases/columnCrystals.js"></script>
