Rename raycasting JS file

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
       // - https://github.com/hakimel/reveal.js#dependencies
       Reveal.initialize({
         hash: true,
+        viewDistance: 3,
         dependencies: [
           { src: 'plugin/markdown/marked.js' },
           { src: 'plugin/markdown/markdown.js' },
@@ -313,7 +314,7 @@
     <script src="lib/js/jquery.min.js"></script>
     <script src="lib/js/EventEmitter.js"></script>
     <script src="js/canvases.js"></script>
-    <script src="js/canvases/raycasttest.js"></script>
+    <script src="js/canvases/raycasting.js"></script>
     <script src="js/canvases/crystalExamples.js"></script>
     <script src="js/canvases/plateCrystals.js"></script>
     <script src="js/canvases/columnCrystals.js"></script>
