Rename name of raycasting module too

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
           <section>
             <h3>Säteen kuljetus</h3>
-            <canvas data-content="raycasttest" width="700" height="700"></canvas>
+            <canvas data-content="raycasting" width="700" height="700"></canvas>
           </section>
 
           <section>
